plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.1.0'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'biz.donvi'
version '0.1'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.9.2'
}

sourceCompatibility = '19'
targetCompatibility = '19'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'biz.donvi.syncthingversionpicker'
  mainClass = 'biz.donvi.syncthingversionpicker.SyncPickerApp'
}

javafx {
  version = '21-ea+24'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation('org.controlsfx:controlsfx:11.1.2')
  implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
    exclude(group: 'org.openjfx')
  }
  implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.7.1'
  implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
  implementation 'org.kordamp.ikonli:ikonli-feather-pack:12.3.1'
  implementation 'org.kordamp.ikonli:ikonli-evaicons-pack:12.3.1'
  implementation 'com.github.mwiede:jsch:0.2.13'
}

test {
useJUnitPlatform()}

jar {
  manifest {
    attributes(
      'Main-Class': 'biz.donvi.syncthingversionpicker.SyncPickerApp'
    )
  }
}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules', 'jdk.crypto.ec']
  launcher {
    name = 'SyncthingVersionPicker'
  }
}

jlinkZip {
  group = 'distribution'
}